kustomize/01_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-simple-flask-app
  namespace: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: myapp
          image: $DOCKER_USERNAME/flask-app:$IMAGE_VERSION
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
