kustomize/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-flask-app
  namespace: flask-app
spec:
  selector:
    app: flask-app
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 5000
