kustomize/03_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-flask-app
  namespace: flask-app
  labels:
    name: ing-flask-app
spec:
  rules:
  - host: test-flask.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-flask-app
            port: 
              number: 80
